src/test/ui/feature-gates/feature-gate-tuple-struct-self-ctor.stderr
error[E0423]: expected function, found self type `Self`
  --> $DIR/feature-gate-tuple-struct-self-ctor.rs:15:9
   |
LL |         Self(1,2)
   |         ^^^^ not a function
   |
   = note: can't use `Self` as a constructor, you must use the implemented struct

error[E0658]: tuple struct Self constructors are unstable (see issue #51994)
  --> $DIR/feature-gate-tuple-struct-self-ctor.rs:15:9
   |
LL |         Self(1,2)
   |         ^^^^^^^^^
   |
   = help: add #![feature(tuple_struct_self_ctor)] to the crate attributes to enable

error: aborting due to 2 previous errors

Some errors occurred: E0423, E0658.
For more information about an error, try `rustc --explain E0423`.
